force-app/main/default/objects/HowTo__c/fields/DefaultVeld__c.field-meta.xml
<CustomField>
    <fullName>DefaultVeld__c</fullName>
    <defaultValue>&apos;Dit is een default waarde&apos;</defaultValue>
    <description>Veld met een default waarde</description>
    <label>DefaultVeld</label>
    <length>255</length>
    <type>Text</type>
</CustomField>