force-app/main/default/objects/HowTo__c/fields/LogVeld__c.field-meta.xml
<CustomField>
    <fullName>LogVeld__c</fullName>
    <label>LogVeld</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>